<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/profile_label" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_announcement_black_24dp"
            android:title="@string/feedback_label" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history_black_24dp"
            android:title="@string/history_label"/>
        <!--<item-->
            <!--android:id="@+id/nav_terms"-->
            <!--android:icon="@drawable/ic_description_black_24dp"-->
            <!--android:title="@string/terms_label" />-->

        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_phone_black_24dp"
            android:title="@string/contact_label" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/about_label" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="Logout"
            />
</menu>
