<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_centerInParent="true"
    tools:context="com.musanga.hackersguild.musanga.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:background="#eaeadb"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:textColor="@color/colorOrange"
                android:layout_marginBottom="8dp"
                android:text="Social"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/colorWhite">

                <TextView
                    android:id="@+id/fb_link"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:layout_marginLeft="7dp"
                    android:drawableLeft="@drawable/logo_facebook"
                    android:drawablePadding="5dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:clickable="true"
                    android:text="@string/musanga_deliveries"
                    android:onClick="facebooListener"/>
                <TextView
                    android:id="@+id/twitter_link"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="27dp"
                    android:layout_marginLeft="7dp"
                    android:drawablePadding="5dp"
                    android:clickable="true"
                    android:textColor="@color/colorPrimaryDark"
                    android:drawableLeft="@drawable/square_twitter"
                    android:text="@string/musanga_logistics"
                    android:onClick="twitterListener"/>
                <TextView
                    android:id="@+id/linkedin_link"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="27dp"
                    android:layout_marginLeft="7dp"
                    android:layout_marginBottom="7dp"
                    android:drawablePadding="5dp"
                    android:clickable="true"
                    android:textColor="@color/colorPrimaryDark"
                    android:autoLink="web"
                    android:drawableLeft="@drawable/square_linkedin"
                    android:text="@string/musanga_lg"
                    android:onClick="linkedinListener"
                    />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textAllCaps="true"
                android:textColor="@color/colorOrange"
                android:layout_marginBottom="8dp"
                android:text="@string/email"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/colorWhite">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:layout_marginLeft="7dp"
                    android:layout_marginBottom="7dp"
                    android:clickable="true"
                    android:autoLink="email"
                    android:drawableLeft="@drawable/about_email_black"
                    android:text="@string/email_address"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textAllCaps="true"
                android:textColor="@color/colorOrange"
                android:layout_marginBottom="8dp"
                android:text="@string/phone"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/colorWhite">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:layout_marginLeft="7dp"
                    android:layout_marginBottom="7dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:autoLink="phone"
                    android:drawableLeft="@drawable/about_local_phone"
                    android:linksClickable="true"
                    android:text="@string/phone_number"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>
