<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="horizontal"
            android:layout_margin="20dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/mode_background"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_marginStart="10dp"
                    android:layout_gravity="center"
                    android:textSize="18sp"
                    android:text="@string/mode"/>

                <TextView
                    android:id="@+id/modeOfDeliveryPlaceHolder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:text="@string/motor_bike"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp" />
                <ImageView
                    android:layout_marginStart="10dp"
                    android:id="@+id/imageDrawable"
                    android:layout_gravity="center"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:srcCompat="@drawable/motor_icons"
                    android:transitionName="mode_transition"
                    />
            </LinearLayout>
            <android.support.v7.widget.CardView
                android:id="@+id/pickupAddressCard"
                android:layout_width="250dp"
                android:layout_height="43dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp">

                <fragment
                    android:id="@+id/pickup_place_autocomplete_fragment"
                    android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:layout="@layout/frag" />
                <TextView
                    android:id="@+id/pickupLocationAddress"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/input_field_background"
                    android:gravity="left|center"
                    android:padding="5dp"
                    android:hint="@string/hint_recipient_name"
                    android:textColor="@color/grey" />
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="250dp"
                android:layout_height="43dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center">
                <fragment
                    android:id="@+id/place_autocomplete_fragment"
                    android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:layout="@layout/frag" />
                <TextView
                    android:id="@+id/destinationAddress"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/input_field_background"
                    android:gravity="left|center"
                    android:padding="5dp"
                    android:hint="@string/hint_delivery_address"
                    android:textColor="@color/grey" />
            </android.support.v7.widget.CardView>
            <EditText
                android:id="@+id/addressDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_field_background"
                android:layout_marginTop="20dp"
                android:hint="@string/address"
                android:textSize="14sp"
                android:gravity="top|start"
                android:padding="10dp"
                />
            <EditText
                android:id="@+id/recipientName"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:background="@drawable/input_field_background"
                android:layout_marginTop="20dp"
                android:hint="@string/hint_recipient_name"
                android:textSize="14sp"
                android:padding="10dp"
                />
            <EditText
                android:id="@+id/recipientPhone"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:background="@drawable/input_field_background"
                android:layout_marginTop="20dp"
                android:hint="@string/hint_recipient_phone"
                android:inputType="phone"
                android:textSize="14sp"
                android:padding="10dp"
                />
            <EditText
                android:id="@+id/packageDetails"
                android:layout_width="250dp"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/input_field_background"
                android:drawablePadding="10dp"
                android:ems="10"
                android:gravity="start"
                android:hint="@string/package_description"
                android:padding="10dp"
                android:selectAllOnFocus="false"
                android:textSize="14sp"
                android:layout_weight="1" />
            <Button
                android:id="@+id/rdSubmit"
                android:layout_width="240dp"
                android:layout_height="48dp"
                android:background="@drawable/btn_login"
                android:layout_gravity="center"
                android:text="@string/done"
                android:layout_marginTop="40dp"
                android:textColor="?android:attr/fastScrollTextColor" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/transparentBg"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:background="@color/transparentAccent"
            android:orientation="vertical"
            android:visibility="gone">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
        <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/avi"
            android:layout_width="151dp"
            android:layout_height="144dp"
            android:layout_gravity="center"
            style="@style/AVLoadingIndicatorView"
            android:visibility="gone"
            app:indicatorName="BallClipRotateMultipleIndicator"
            app:indicatorColor="@color/colorPrimary" />
        <RelativeLayout
            android:id="@+id/tooltip"
            android:layout_width="262dp"
            android:layout_height="230dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="209dp"
            android:background="@drawable/flippop"
            android:clickable="true"
            android:paddingEnd="6dp"
            android:paddingStart="6dp"
            android:paddingTop="25dp"
            android:visibility="invisible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/header_address_tip"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="23dp"
                android:paddingStart="10dp"
                android:text="@string/pick_up"
                android:textColor="@color/white"
                android:textSize="14dp"
                android:textStyle="italic|bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="78dp"
                android:paddingStart="10dp"
                android:text="@string/pickup_infor"
                android:textColor="@color/white"
                android:textSize="14dp"
                android:textStyle="italic|bold" />

            <CheckBox
                android:id="@+id/checkbox_dont_show"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignParentBottom="true"
                android:layout_margin="5dp"
                android:onClick="onCheckboxClicked"
                android:text="@string/msg_dont_show"
                android:buttonTint="@color/colorAccent"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/closeBtn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_margin="5dp"
                android:background="@null"/>

        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/recipientTooltip"
            android:layout_width="262dp"
            android:layout_height="150dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="170dp"
            android:background="@drawable/popup"
            android:paddingEnd="6dp"
            android:clickable="true"
            android:paddingStart="6dp"
            android:paddingTop="25dp"
            android:visibility="invisible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/header_recipient_tip"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="23dp"
                android:paddingStart="10dp"
                android:text="@string/msg_package_recipient"
                android:textColor="@color/white"
                android:textSize="14dp"
                android:textStyle="italic|bold" />

            <CheckBox
                android:id="@+id/recipient_checkbox_dont_show"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="13dp"
                android:onClick="onRecipientCheckboxClicked"
                android:text="@string/msg_dont_show"
                android:textColor="@color/white"
                android:buttonTint="@color/colorAccent" />

            <Button
                android:id="@+id/recipient_closeBtn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="13dp"
                android:background="@null"/>
        </RelativeLayout>



    </FrameLayout>
</ScrollView>
