<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_centerInParent="true"
    tools:context="com.musanga.hackersguild.musanga.FeedbackActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:paddingBottom="200dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_field_background"
                android:hint="@string/subject"
                android:textSize="16sp"
                android:fontFamily="sans-serif-light"
                android:paddingBottom="12dp"
                android:paddingLeft="12dp"
                android:paddingTop="12dp" />

            <EditText
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:inputType="textMultiLine"
                android:gravity="top"
                android:layout_marginTop="25dp"
                android:background="@drawable/input_field_background"
                android:hint="@string/description"
                android:textSize="16sp"
                android:fontFamily="sans-serif-light"
                android:paddingBottom="12dp"
                android:paddingLeft="12dp"
                android:paddingTop="12dp" />

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_login"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textColor="#fff" />
            
        </LinearLayout>
    </ScrollView>

</LinearLayout>
