<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/dialog_title_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="18dp"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/thank_you"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/bodyInfro"
        android:layout_width="311dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:text="@string/tracking_msg"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="15sp" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="Send us"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp" />
        <TextView
            android:id="@+id/subBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="3dp"
            android:clickable="true"
            android:gravity="center"
            android:textStyle="bold"
            android:text="feedback"
            android:textColor="@color/colorAccent"
            android:textSize="15sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="3dp"
            android:gravity="center"
            android:text="for help and queries"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp" />

    </LinearLayout>

    <Button
        android:id="@+id/dialog_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#fff"
        android:background="#F38512"
        android:text="@string/ok" />

</LinearLayout>